<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data
        class=".MainBinding"
        ></data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fragment_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_background"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/theme_primary"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_home"
                    style="@style/RBDefaultStyle"
                    android:checked="true"
                    android:drawableTop="@drawable/selector_tab_home"
                    android:text="@string/main_tab_home"/>

                <RadioButton
                    android:id="@+id/rb_brand"
                    style="@style/RBDefaultStyle"
                    android:drawableTop="@drawable/selector_tab_brand"
                    android:text="@string/main_tab_brand"/>

                <RadioButton
                    android:id="@+id/rb_vip"
                    style="@style/RBDefaultStyle"
                    android:drawableTop="@drawable/selector_tab_vip"
                    android:text="@string/main_tab_vip"/>

                <RadioButton
                    android:id="@+id/rb_more"
                    style="@style/RBDefaultStyle"
                    android:drawableTop="@drawable/selector_tab_more"
                    android:text="@string/main_tab_more"/>
            </RadioGroup>
        </LinearLayout>
    </FrameLayout>
</layout>