<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class=".MoreLayout"></data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.app.CarCia.ui.Activity.MoreActivity">

            <include
                android:id="@+id/include"
                layout="@layout/title_bar"/>

            <FrameLayout
                android:id="@+id/flyt_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/log_in_CarCia"
                    android:textSize="@dimen/text_large_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@mipmap/icon_arrow_right"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <FrameLayout
                android:id="@+id/flyt_contact_CarCia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contact_CaiCia"
                    android:textSize="@dimen/text_large_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@mipmap/icon_arrow_right"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <FrameLayout
                android:id="@+id/flyt_cache_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/cache_cleaner"
                    android:textSize="@dimen/text_large_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@mipmap/icon_arrow_right"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <FrameLayout
                android:id="@+id/flyt_uer_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/user_guide"
                    android:textSize="@dimen/text_large_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@mipmap/icon_arrow_right"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <FrameLayout
                android:id="@+id/flyt_onkey_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/onekey_share"
                    android:textSize="@dimen/text_large_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:src="@mipmap/icon_arrow_right"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <FrameLayout
                android:id="@+id/flyt_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gravy"
                android:clickable="true"
                android:minHeight="55dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/check_update"
                    android:textSize="@dimen/text_large_size"/>

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:drawableEnd="@mipmap/icon_arrow_right"
                    android:drawablePadding="@dimen/item_horizontal_margin"
                    android:text="123"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

            <RelativeLayout
                android:id="@+id/flyt_technology_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:minHeight="35dp"
                android:padding="@dimen/item_horizontal_margin">

                <TextView
                    style="@style/textStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/technology_support"/>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"/>

        </LinearLayout>
    </FrameLayout>
</layout>