<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data class=".DetailLayout">

        <variable
            name="detail"
            type="com.app.CarCia.entity.ItemProductBean.ListEntity.LinkProductEntity"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/title_bar"/>

            <com.app.CarCia.widget.VHDLayout
                android:id="@+id/vhd_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_white">

                <com.app.CarCia.widget.ClashViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/topView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/icon_arrow_up1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/theme_primary"
                        android:gravity="center"
                        android:text="@string/product_introduce"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_middle_size"/>


                    <com.app.CarCia.widget.VHDLayoutChild
                        android:id="@+id/vhd_child"
                        android:layout_width="match_parent"
                        android:layout_height="330dp"
                        android:layout_gravity="bottom"
                        android:background="@color/color_white"
                        android:padding="14dp">

                        <android.support.v4.view.ViewPager
                            android:id="@+id/child_viewPager"
                            android:layout_width="match_parent"
                            android:layout_height="230dp"
                            android:layout_centerHorizontal="true"/>

                        <RelativeLayout
                            android:id="@+id/r1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/child_viewPager"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/item_vertical_margin">

                            <TextView
                                android:id="@+id/tv_t1"
                                style="@style/textStyle"
                                android:text="@string/product_no"/>

                            <TextView
                                style="@style/textStyle"
                                android:layout_alignTop="@id/tv_t1"
                                android:layout_toEndOf="@id/tv_t1"
                                android:text="@{detail.proNo}"/>

                            <TextView
                                android:id="@+id/tv_t2"
                                style="@style/textStyle"
                                android:layout_below="@id/tv_t1"
                                android:text="@string/product_spec"/>

                            <TextView
                                style="@style/textStyle"
                                android:layout_alignTop="@id/tv_t2"
                                android:layout_toEndOf="@id/tv_t2"
                                android:text="@{detail.proSpec}"/>
                        </RelativeLayout>

                        <TextView
                            style="@style/textStyle"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:text="@string/pull_load_detail"
                            android:textColor="@color/color_text_gravy"/>
                    </com.app.CarCia.widget.VHDLayoutChild>


                </LinearLayout>
            </com.app.CarCia.widget.VHDLayout>
        </LinearLayout>
    </FrameLayout>
</layout>